Fix pairedTx sync, cashlink filter button alignment

--- a/src/elements/x-transactions/x-transactions.css
+++ b/src/elements/x-transactions/x-transactions.css
@@ -266,7 +266,7 @@ x-transactions.filtered .hide-if-filtered {
     margin: -6px 0 -6px 12px;
     font-size: 16px;
     font-weight: 600;
-    min-height: 31px;
+    min-height: 32px;
     border-radius: 500rem;
 }
 
@@ -275,9 +275,9 @@ x-transactions.filtered .hide-if-filtered {
     margin: -24px -6px;
     font-size: 24px;
     padding: 0;
-    line-height: 31px;
-    width: 31px;
+    width: 32px;
     padding-left: 1px;
+    padding-bottom: 1px;
 }
 
 @media (max-width: 420px) {
